<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_saveAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/btn_saveAdress" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/edit_string" />
    
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
    

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetName" />

            <EditText
                android:id="@+id/streetname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetName_edit" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hNumber" />

            <EditText
                android:id="@+id/hNumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hNumber_edit" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postcode" />

            <EditText
                android:id="@+id/postcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postcode_edit" />
        </TableRow>
    </TableLayout>

</LinearLayout>